correct path for edition.css in edition.html

--- a/guichaul/edition.html
+++ b/guichaul/edition.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)http://www.deaf-page.de/guichaulmTel/edition.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Anathomie</title><meta name="keywords" content="medieval french,Gui de Chauliac,Grande Chirurgie"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="./edition_files/edition.css" rel="stylesheet" type="text/css"></head><body><header><h1><em>Anathomie</em></h1><h2>First treatise of the <em>Grande Chirurgie</em> by Gui de Chauliac </h2><h3>Critical edition of manuscript Montpellier Bibliothèque de la Faculté de
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Anathomie</title><meta name="keywords" content="medieval french,Gui de Chauliac,Grande Chirurgie"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="edition.css" rel="stylesheet" type="text/css"></head><body><header><h1><em>Anathomie</em></h1><h2>First treatise of the <em>Grande Chirurgie</em> by Gui de Chauliac </h2><h3>Critical edition of manuscript Montpellier Bibliothèque de la Faculté de
                             Médecine n<sup>o</sup>184 [2<sup>nd</sup> third 15<sup>th</sup> c.], by
                             Sabine Tittel </h3></header><div prefix="rdfs: http://www.w3.org/2000/01/rdf-schema# foaf: http://xmlns.com/foaf/0.1/                         skos: http://www.w3.org/2004/02/skos/core#"><p>
             <span class="page">[14v°a]</span> Ou
